Fix overlay z-index

--- a/Demos/web/css/demo01.less
+++ b/Demos/web/css/demo01.less
@@ -224,5 +224,5 @@ input:hover, input:active, input:focus, textarea:hover, textarea:active, textare
   height: 100%;
   background-color: white;
   .opacity(75);
-  z-index: 1;
+  z-index: 9;
 }
